[gd_scene load_steps=18 format=3 uid="uid://jas1sb5s4nr4"]

[ext_resource type="Script" path="res://Scripts/power_crate.gd" id="1_wpobk"]
[ext_resource type="Texture2D" uid="uid://bmuxnss5aowxe" path="res://Assets/spriteSheets/pixil-frame-0 - 2024-10-08T073049.114.png" id="2_rg1kh"]
[ext_resource type="PackedScene" uid="uid://c64cpar7nrcf6" path="res://Scenes/power_crate_detonation.tscn" id="3_w2css"]
[ext_resource type="Script" path="res://Scripts/explosionArea.gd" id="4_wgwxt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ievo"]
size = Vector2(30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1mh7"]
atlas = ExtResource("2_rg1kh")
region = Rect2(0, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2u8a"]
atlas = ExtResource("2_rg1kh")
region = Rect2(30, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_tg8fj"]
atlas = ExtResource("2_rg1kh")
region = Rect2(60, 0, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3o1j"]
atlas = ExtResource("2_rg1kh")
region = Rect2(0, 30, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytwrj"]
atlas = ExtResource("2_rg1kh")
region = Rect2(30, 30, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_5k826"]
atlas = ExtResource("2_rg1kh")
region = Rect2(60, 30, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_53lp0"]
atlas = ExtResource("2_rg1kh")
region = Rect2(0, 60, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_oho1x"]
atlas = ExtResource("2_rg1kh")
region = Rect2(30, 60, 30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jb8l"]
atlas = ExtResource("2_rg1kh")
region = Rect2(60, 60, 30, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_omfta"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1mh7")
}],
"loop": true,
"name": &"0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2u8a")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tg8fj")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3o1j")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytwrj")
}],
"loop": true,
"name": &"4",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5k826")
}],
"loop": true,
"name": &"5",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_53lp0")
}],
"loop": true,
"name": &"6",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oho1x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jb8l")
}],
"loop": true,
"name": &"detonate",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wsxes"]
size = Vector2(34, 34)

[sub_resource type="CircleShape2D" id="CircleShape2D_vxi7a"]
radius = 118.017

[node name="powerCrate" type="RigidBody2D" groups=["power_crate"]]
collision_layer = 527
collision_mask = 527
mass = 0.1
gravity_scale = 0.0
script = ExtResource("1_wpobk")

[node name="powerCrateCollider" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_8ievo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_omfta")
animation = &"0"
autoplay = "0"

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="areaCollider" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_wsxes")

[node name="detontateTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="powerCrateDetonation" parent="." instance=ExtResource("3_w2css")]

[node name="resetTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="explosionArea" type="Area2D" parent="."]
visible = false
collision_layer = 527
collision_mask = 527
script = ExtResource("4_wgwxt")

[node name="explosionCollider" type="CollisionShape2D" parent="explosionArea"]
shape = SubResource("CircleShape2D_vxi7a")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="detontateTimer" to="." method="_on_detontate_timer_timeout"]
[connection signal="timeout" from="resetTimer" to="." method="_on_reset_timer_timeout"]
[connection signal="body_entered" from="explosionArea" to="." method="_on_explosion_area_body_entered"]
